# effective-c

./: .gitignore  CMakeLists.txt  README.md
src/: arithmetic.c  basictypes.c  control.c  debugging.c  driver.c  dynamic.c  exprnoperators.c  goto.c  hello.c  io.c  isprime.c  lifetime.c  preprocessor.c  progstructure.c  retrieve.c  scope.c  strings.c  swap.c  threefunc.c  useafterfree.c
