cmake_minimum_required(VERSION 3.20)
project(effective-c)

add_executable(hello "src/hello.c")
add_executable(swap "src/swap.c")
add_executable(lifetime "src/lifetime.c")
add_executable(basictypes "src/basictypes.c")
add_executable(retrieve "src/retrieve.c")
add_executable(threefunc "src/threefunc.c")