cmake_minimum_required(VERSION 3.20)
project(effective-c)

add_executable(hello "src/hello.c")
add_executable(swap "src/swap.c")
add_executable(lifetime "src/lifetime.c")
add_executable(basictypes "src/basictypes.c")
add_executable(retrieve "src/retrieve.c")
add_executable(threefunc "src/threefunc.c")
add_executable(arithmetic "src/arithmetic.c")
add_executable(exprnoperators "src/exprnoperators.c")
add_executable(control "src/control.c")
add_executable(goto "src/goto.c")
add_executable(dynamic "src/dynamic.c")
add_executable(useafterfree "src/useafterfree.c")
add_executable(strings "src/strings.c")
add_executable(io "src/io.c")
add_executable(preprocessor "src/preprocessor.c")
add_executable(progstructure "src/progstructure.c")
add_library(isprime "src/isprime.c")
add_executable(driver "src/driver.c")
target_link_libraries(driver isprime)
add_executable(debugging "src/debugging.c")
